pre test changes
changes to both script file and config file

--- a/Blank.config
+++ b/Blank.config
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!HIP configuration file use this to set ROBOCOPY arguments>
 <Configuration>
 	<TransferSettings>
 		<Name></Name>
+		<File></File>
+		<! Source, destination and copy location full path, no \ at the end>
 		<Source></Source>
 		<Destination></Destination>
 		<CopyTo></CopyTo>
 	</TransferSettings>
 	<ProcessSettings>
-		<Run>Yes</Run>
-		<LogFileLocation></LogFileLocation>
-		<LogFileLocationCopyAction></LogFileLocationCopyAction>
+		<!Run Yes or No. Use to stop the process running>
+		<Run></Run>
+		<! ROBOCOPY log path. \name of log, log prefix>
+		<LogFileLocation>\\mphybristest01\D$\HIP\Logs\TestRv</LogFileLocation>
+		<LogFileLocationCopyAction>\\mphybristest01\D$\HIP\Logs\CopyRV</LogFileLocationCopyAction>
+		<!unique processid for monitoring>
 		<ProcessId></ProcessId>
 	</ProcessSettings>
 </Configuration>
